src-tauri/src/c/inc/ControlCANFDx64.h

//********************The following content is the same as ControlCAN. h************************************************************//

/*------------ZLG compatible functions and data types---------------------------------*/

//1. The data type of ZLG series CAN interface card information.
typedef  struct  _VCI_BOARD_INFO{
USHORT	hw_Version;
USHORT	fw_Version;
USHORT	dr_Version;
USHORT	in_Version;
USHORT	irq_Num;
BYTE	can_Num;
CHAR	str_Serial_Num[20];
CHAR	str_hw_Type[40];
USHORT	Reserved[4]; 	
} VCI_BOARD_INFO,*PVCI_BOARD_INFO;
 

//2. Define the data type of CAN information frames.
typedef  struct  _VCI_CAN_OBJ{

UINT	ID;
UINT	TimeStamp;
BYTE	TimeFlag;
BYTE	SendType;
BYTE	RemoteFlag;
BYTE	ExternFlag;
BYTE	DataLen;
BYTE	Data[8];
BYTE	Reserved[3];
}VCI_CAN_OBJ,*PVCI_CAN_OBJ;
//3. Define the data type of CAN controller status.
typedef struct _VCI_CAN_STATUS{
UCHAR	ErrInterrupt;
UCHAR	regMode;
UCHAR	regStatus;
UCHAR	regALCapture;
UCHAR	regECCapture;
UCHAR	regEWLimit;
UCHAR	regRECounter;
UCHAR	regTECounter;
DWORD	Reserved;
}VCI_CAN_STATUS,*PVCI_CAN_STATUS;
//4. Define the data type for error messages.
typedef struct _ERR_INFO{
UINT	ErrCode;
BYTE	Passive_ErrData[3];
BYTE	ArLost_ErrData;
} VCI_ERR_INFO,*PVCI_ERR_INFO;
//5. Define the data type for initializing CAN
typedef struct _INIT_CONFIG{
DWORD	AccCode;
DWORD	AccMask;
DWORD	Reserved;
UCHAR	Filter;
UCHAR	Timing0; 	
UCHAR	Timing1; 	
UCHAR	Mode;
}VCI_INIT_CONFIG,*PVCI_INIT_CONFIG;
typedef void * CHANNEL_HANDLE;
UINT FUNC_CALL ZCAN_SetFilterMode(CHANNEL_HANDLE channel_handle, UINT mode);
UINT FUNC_CALL ZCAN_SetFilterStartID(CHANNEL_HANDLE channel_handle, UINT startID);
UINT FUNC_CALL ZCAN_SetFilterEndID(CHANNEL_HANDLE channel_handle, UINT EndID);
//******************************************************************************************************
//******************************************************************************************************
//The following functions are the original ControlCAN library functions required for compatibility with CANtest and other software
DWORD  __stdcall  VCI_OpenDevice(DWORD DeviceType,DWORD DeviceInd,DWORD Reserved);
__declspec(dllexport)
DWORD __stdcall VCI_CloseDevice(DWORD DeviceType,DWORD DeviceInd);
__declspec(dllexport)
DWORD __stdcall  VCI_InitCAN(DWORD DeviceType, DWORD DeviceInd, DWORD CANInd, PVCI_INIT_CONFIG pInitConfig);
__declspec(dllexport)
DWORD __stdcall VCI_ReadBoardInfo(DWORD DeviceType,DWORD DeviceInd,PVCI_BOARD_INFO pInfo);
__declspec(dllexport)
DWORD __stdcall VCI_ReadErrInfo(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd,PVCI_ERR_INFO pErrInfo);
__declspec(dllexport)
DWORD __stdcall VCI_ReadCANStatus(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd,PVCI_CAN_STATUS pCANStatus);
__declspec(dllexport)
DWORD __stdcall VCI_GetReference(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd,DWORD RefType,PVOID pData);
__declspec(dllexport)
DWORD __stdcall VCI_SetReference(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd,DWORD RefType,PVOID pData);
__declspec(dllexport)
ULONG __stdcall VCI_GetReceiveNum(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd);
__declspec(dllexport)
DWORD __stdcall VCI_ClearBuffer(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd);
__declspec(dllexport)
DWORD __stdcall VCI_StartCAN(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd);
__declspec(dllexport)
DWORD __stdcall VCI_ResetCAN(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd);
__declspec(dllexport)
ULONG  __stdcall VCI_Transmit(DWORD DeviceType,DWORD DeviceInd,DWORD CANInd,PVCI_CAN_OBJ pSend,DWORD Length);
__declspec(dllexport)
ULONG __stdcall  VCI_Receive(DWORD DevType, DWORD DevIndex, DWORD  CANIndex, PVCI_CAN_OBJ pReceive, ULONG Len, INT WaitTime);