src-tauri/src/models/WSFdCan/fdcan_c.rs

unsafe extern "C" {
    pub fn ZCAN_SetFilterMode(channel_handle: CHANNEL_HANDLE, mode: UINT) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetFilterStartID(channel_handle: CHANNEL_HANDLE, startID: UINT) -> UINT;
}
unsafe extern "C" {
    pub fn ZCAN_SetFilterEndID(channel_handle: CHANNEL_HANDLE, EndID: UINT) -> UINT;
}
unsafe extern "C" {
    pub fn VCI_OpenDevice(DeviceType: DWORD, DeviceInd: DWORD, Reserved: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_CloseDevice(DeviceType: DWORD, DeviceInd: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_InitCAN(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        pInitConfig: PVCI_INIT_CONFIG,
    ) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_ReadBoardInfo(DeviceType: DWORD, DeviceInd: DWORD, pInfo: PVCI_BOARD_INFO) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_ReadErrInfo(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        pErrInfo: PVCI_ERR_INFO,
    ) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_ReadCANStatus(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        pCANStatus: PVCI_CAN_STATUS,
    ) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_GetReference(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        RefType: DWORD,
        pData: PVOID,
    ) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_SetReference(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        RefType: DWORD,
        pData: PVOID,
    ) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_GetReceiveNum(DeviceType: DWORD, DeviceInd: DWORD, CANInd: DWORD) -> ULONG;
}
unsafe extern "C" {
    pub fn VCI_ClearBuffer(DeviceType: DWORD, DeviceInd: DWORD, CANInd: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_StartCAN(DeviceType: DWORD, DeviceInd: DWORD, CANInd: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_ResetCAN(DeviceType: DWORD, DeviceInd: DWORD, CANInd: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn VCI_Transmit(
        DeviceType: DWORD,
        DeviceInd: DWORD,
        CANInd: DWORD,
        pSend: PVCI_CAN_OBJ,
        Length: DWORD,
    ) -> ULONG;
}
unsafe extern "C" {
    pub fn VCI_Receive(
        DevType: DWORD,
        DevIndex: DWORD,
        CANIndex: DWORD,
        pReceive: PVCI_CAN_OBJ,
        Len: ULONG,
        WaitTime: INT,
    ) -> ULONG;
}
